@@ -2,6 +2,7 @@
 =====
 * Added support for filter commands.
 * Make [Av.get_pixel_aspect] optional.
+* Rename [Avfilter.sample_aspect_ratio] into [Avfilter.pixel_aspect], make it optional.
 
 1.0.2 (2021-11-19)
 =====
